--- a/app/views/forums/show.html.erb
+++ b/app/views/forums/show.html.erb
@@ -1,28 +1,22 @@
-<p>
-  <b>Title:</b>
-  <%=h @forum.title %>
-</p>
+<h1><%= link_to "Forums", forums_path %>: <%= @forum.title %></h1>
 
-<p>
-  <b>Description:</b>
-  <%=h @forum.description %>
-</p>
+<p class="small_text"><%= @forum.description %></p>
 
-<p>
-  <b>Position:</b>
-  <%=h @forum.position %>
-</p>
+<div style="text-align:center;"><%= will_paginate @message_posts %></div>
 
-<p>
-  <b>Moderator only:</b>
-  <%=h @forum.moderator_only %>
-</p>
+<table class="messages" cellspacing="0px" cellpadding="0px">
+  <% for message in @message_posts -%>
+    <%= render :partial => "message_posts/message_in_forum", :locals => { :message => message } %>
+  <% end -%>
+</table>
 
-<p>
-  <b>Newest message post:</b>
-  <%=h @forum.newest_message_post_id %>
-</p>
+<div style="text-align:center;"><%= will_paginate @message_posts %></div>
 
+<br/>
 
-<%= link_to 'Edit', edit_forum_path(@forum) %> |
-<%= link_to 'Back', forums_path %>
+<% unless @forum.moderator_only? and (current_user && !current_user.is_admin?) -%>
+  <h4>Start a new discussion thread in this forum:</h4>
+  
+  <%= render :partial => "/message_posts/message_form", :locals => { :message_post => @new_message_post } %>
+<% end -%>
+
