--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,6 +5,7 @@
     <title><%= ["A Forum", @page_title].reject(&:blank?).join(' - ') %></title>
     <%= stylesheet_link_tag 'reset' %>
     <%= stylesheet_link_tag 'error_messages' %>
+    <%= stylesheet_link_tag 'text_and_colors' %>
     <%= stylesheet_link_tag 'application' %>
     <script type="text/javascript" src="http://jqueryjs.googlecode.com/files/jquery-1.3.2.min.js"></script>
     <%= javascript_include_tag 'jquery.min' %>
