--- a/app/views/forums/edit.html.erb
+++ b/app/views/forums/edit.html.erb
@@ -1,32 +1,6 @@
 <h1>Editing forum</h1>
 
-<% form_for(@forum) do |f| %>
-  <%= f.error_messages %>
+<%= render :partial => 'form' %>
 
-  <p>
-    <%= f.label :title %><br />
-    <%= f.text_field :title %>
-  </p>
-  <p>
-    <%= f.label :description %><br />
-    <%= f.text_area :description %>
-  </p>
-  <p>
-    <%= f.label :position %><br />
-    <%= f.text_field :position %>
-  </p>
-  <p>
-    <%= f.label :moderator_only %><br />
-    <%= f.check_box :moderator_only %>
-  </p>
-  <p>
-    <%= f.label :newest_message_post_id %><br />
-    <%= f.text_field :newest_message_post_id %>
-  </p>
-  <p>
-    <%= f.submit 'Update' %>
-  </p>
-<% end %>
-
-<%= link_to 'Show', @forum %> |
-<%= link_to 'Back', forums_path %>
+<%= link_to 'Back to this Forum', @forum %> |
+<%= link_to 'Back to the Forum Index', forums_path %>
