--- a/app/views/forums/index.html.erb
+++ b/app/views/forums/index.html.erb
@@ -25,7 +25,8 @@
           <% if forum.most_recent_post -%>
             <%= link_to forum.most_recent_post.subject, :action => :thread,
                   :thread_id => forum.most_recent_post.thread_id || forum.most_recent_post.id,
-                  :page => Message.last_page_number_for(:thread_id => forum.most_recent_post.thread_id || forum.most_recent_post.id),
+                  :page => Message.last_page_number_for(
+                      :thread_id => forum.most_recent_post.thread_id || forum.most_recent_post.id),
                   :anchor => "bottom" %><br/>
             by <%= link_to forum.most_recent_post.user.name, :action => :log,
                     :login => forum.most_recent_post.user.login %>
@@ -40,7 +41,8 @@
     <tr>
       <td class="small_text" colspan="2">
         <%= link_to 'edit details of this forum', edit_forum_path(forum) %> |
-        <%= link_to 'delete this forum', forum, :confirm => 'Are you sure you want to delete this forum and all the messages in it?', :method => :delete %>
+        <%= link_to 'delete this forum', forum, :method => :delete,
+              :confirm => 'Are you sure you want to delete this forum and all the messages in it?' %>
       </td>
     </tr>
     <% end %>
