--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,6 +20,8 @@
       <%= javascript_include_tag 'jquery-1.3.2.min' %>
     <% end %>
     <script type="text/javascript" src="/ckeditor/ckeditor.js"></script>
+    <%= javascript_include_tag 'jquery.string.1.0-min', 'lowpro.jquery' %>
+    <%= yield :javascript %>
   </head>
   <body>
     <div class="container">
