--- a/app/views/content_pages/new.html.erb
+++ b/app/views/content_pages/new.html.erb
@@ -2,4 +2,4 @@
 
 <%= render :partial => 'form'  %>
 
-<p>[<%= link_to 'Back to Index', content_pages_path %>]</p>
+<p>[<%= link_to 'Back to List of Pages', content_pages_path %>]</p>
