--- a/app/views/content_pages/show.html.erb
+++ b/app/views/content_pages/show.html.erb
@@ -1,18 +1,6 @@
-<p>
-  <b>Name:</b>
-  <%=h @content_page.name %>
-</p>
+<h1><%=h @content_page.name %></h1>
 
-<p>
-  <b>Body:</b>
-  <%=h @content_page.body %>
-</p>
-
-<p>
-  <b>Category:</b>
-  <%=h @content_page.category_id %>
-</p>
-
+<%= @content_page.body %>
 
 <%= link_to 'Edit', edit_content_page_path(@content_page) %> |
-<%= link_to 'Back', content_pages_path %>
+<%= link_to 'List of Pages', content_pages_path %>
