--- a/app/views/content_pages/show.html.erb
+++ b/app/views/content_pages/show.html.erb
@@ -10,8 +10,9 @@
 
 
 <% if current_user and current_user.is_admin? %>
-  <p>
-    <%= link_to 'Edit', edit_content_page_path(@content_page) %> |
-    <%= link_to 'List of Pages', content_pages_path %>
+  <p class="admin_links">
+    <%= link_to 'Edit this Page', edit_content_page_path(@content_page) %> |
+    <%= link_to 'List of Pages', content_pages_path %> |
+    <%= link_to 'List of Categories', categories_path %>
   </p>
 <% end %>
