--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,6 +16,7 @@
     <% if RAILS_ENV == "production" %>
       <script type="text/javascript" src="http://jqueryjs.googlecode.com/files/jquery-1.3.2.min.js"></script>
     <% else %>
+      <%# TODO: remove the following line %>
       <!-- RAILS_ENV: <%= RAILS_ENV %>-->
       <%= javascript_include_tag 'jquery-1.3.2.min' %>
     <% end %>
@@ -27,7 +28,7 @@
     <div class="container">
       <div class="span-24 last">
         <div class="top_menu bg_palette_1 text_palette_8">
-          <%= @top_menu ? @top_menu.body_for_display : "TODO: create the top menu" %>
+          <%= top_menu %>
         </div>
       </div>
 
@@ -35,20 +36,11 @@
         <div class="large-text">Logo</div>
 
         <div class="side_menu bg_palette_5 border_palette_5 text_palette_8">
-          <%= @side_menu ? @side_menu.body_for_display : "TODO: create the side menu" %>
+          <%= side_menu %>
         </div>
         <br/><br/><br/>
         <div class="side_menu bg_palette_5 border_palette_5 text_palette_8" >
-          <%= pluralize User.logged_in.count, "user" %> currently logged in<br />
-
-          <% if !current_user %>
-            <%= link_to "Register", new_account_path %> |
-            <%= link_to "Log In", new_user_session_path %> |
-          <% else %>
-            <%= link_to "My Account", account_path %> |
-            <%= link_to "Logout", user_session_path, :method => :delete,
-                  :confirm => "Are you sure you want to logout?" %>
-          <% end %>
+          <%= user_box %>
         </div>
 
       </div>
