--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -52,12 +52,30 @@ input#user_openid_identifier, input#user_session_openid_identifier {
 .top_menu { 
   border: 4px solid #FFF;
   margin: 20px 0;
-  padding: 16px;
+  padding: 12px;
   -moz-border-radius: 8px;
   -webkit-border-radius: 8px;
+  font-size: 150%;
 }
 
 .top_menu p { margin: 0; }
+
+.top_menu ul {
+  margin: 0;
+  width: 100%;
+  text-align: center;
+}
+
+.top_menu ul li {
+  display: inline;
+  list-style-type: none;
+  padding: 0 5px;
+  margin: 0 5px;
+}
+
+.top_menu ul li a:link, .top_menu ul li a:visited {  color: #DDD; text-decoration: none; }
+.top_menu ul li a:hover {  color: #FFF; text-decoration: none; }
+
 
 .side_menu {
   border-style: solid;
@@ -128,6 +146,15 @@ input#user_openid_identifier, input#user_session_openid_identifier {
     background-color:#DDD;
     text-align:center;
     padding: 4px 8px;
+}
+
+.admin_links a:link, .admin_links a:visited {
+  font-family: Verdana, sans-serif;
+  font-size: 9px;
+  color: #900;
+}
+.admin_links a:hover {
+  color: #F00;
 }
 
 
