--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -76,6 +76,7 @@ input#user_openid_identifier, input#user_session_openid_identifier {
 .top_menu ul li a:link, .top_menu ul li a:visited {  color: #DDD; text-decoration: none; }
 .top_menu ul li a:hover {  color: #FFF; text-decoration: none; }
 
+.footer { margin: 30px 0; padding: 8px 12px; }
 
 .side_menu {
   border-style: solid;
