--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -25,3 +25,7 @@
     <%= f.submit 'add category' %>
   </p>
 <% end %>
+
+<p class="admin_links">
+  <%= link_to 'List of Pages', content_pages_path %>
+</p>
