--- a/app/views/content_pages/_form.html.erb
+++ b/app/views/content_pages/_form.html.erb
@@ -26,7 +26,7 @@
   </p>
 <% end %>
 
-<% unless @content_page.special =~ /Menu/ %>
+<% unless @content_page.special =~ /Menu/ or @content_page.new_record? %>
 <script type="text/javascript">
   //<![CDATA[
     CKEDITOR.replace( 'content_page[body]',
@@ -38,4 +38,5 @@
   //]]>
 </script>
   <%# TODO: filebrowserBrowseUrl : '/something' %>
+  <%# TODO: deal with uploads when page is not yet saved %>
 <% end %>
