--- a/app/views/users/_form.erb
+++ b/app/views/users/_form.erb
@@ -1,19 +1,34 @@
-<p>
-  <%= form.label :login %>:
-  <%= form.text_field :login %>
-</p>
-<p>
-  <%= form.label :display_name %> (optional):
-  <%= form.text_field :display_name %>
-</p>
-<p>
-  <%= form.label :email %>:
-  <%= form.text_field :email %>
-</p>
+<table>
+  <tr>
+    <td><%= form.label :login %>:</td>
+    <td><%= form.text_field :login %></td>
+  </tr>
+  <tr>
+    <td><%= form.label :display_name %> (optional):</td>
+    <td><%= form.text_field :display_name %></td>
+  </tr>
+  <tr>
+    <td><%= form.label :email %>:</td>
+    <td><%= form.text_field :email %></td>
+  </tr>
+  <tr>
+    <td><%= form.label :password, form.object.new_record? ? nil : "Change password (leave blank for no change)" %>:</td>
+    <td>
+      <%= form.password_field :password %><br />
+      <%= form.password_field :password_confirmation %>
+    </td>
+  </tr>
+</table>
 
-<p>
-  <%= form.label :password, form.object.new_record? ? nil : "Change password (leave blank for no change)" %>:
-  <%= form.password_field :password %><br />
-  <%= form.label :password_confirmation %>:
-  <%= form.password_field :password_confirmation %>
-</p>
+<%#
+first_name
+last_name
+state
+role
+agency
+mailing_address
+mailing_city
+mailing_state
+mailing_zip
+phone_number
+%>
