added user definable fields to the user model for random contact data

--- a/app/views/content_pages/index.html.erb
+++ b/app/views/content_pages/index.html.erb
@@ -24,6 +24,8 @@
 </table>
 
 
-<p>
-  <%= link_to 'Create a New Page', new_content_page_path %>
+<p class="admin_links">
+  <%= link_to 'Create a New Page', new_content_page_path %> |
+  <%= link_to 'List of Categories', categories_path %> |
+  <%= link_to 'Site Settings', site_settings_path %>
 </p>
