--- a/app/views/users/reg_pass_required.html.erb
+++ b/app/views/users/reg_pass_required.html.erb
@@ -1,5 +1,5 @@
 <% form_tag register_path, :method => :get do %>
   Registration Passcode:
-  <%= text_field_tag :p %>
+  <%= password_field_tag :p %>
   <%= submit_tag 'go' %>
 <% end %>
