--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -17,3 +17,11 @@
 <% if current_user == @user %>
   <p><%= link_to 'Edit your Contact Information', edit_account_path %></p>
 <% end %>
+
+<% if current_user and current_user.is_admin? %>
+  <p class="admin_links">
+    <%= link_to 'Site Settings', site_settings_path %> | 
+    <%= link_to 'List of Pages', content_pages_path %> |
+    <%= link_to 'List of Categories', categories_path %>
+  </p>
+<% end %>
