--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,6 +13,8 @@
     <%= stylesheet_link_tag 'error_messages' %>
     <%= stylesheet_link_tag 'text_and_colors' %>
     <%= stylesheet_link_tag 'application' %>
+    <link rel="stylesheet" href="<%= url_for(:controller => '/themes', :action => :colors,
+      :name => @theme_colors, :format => 'css') %>" type="text/css" />
     <% if RAILS_ENV == "production" %>
       <script type="text/javascript" src="http://jqueryjs.googlecode.com/files/jquery-1.3.2.min.js"></script>
     <% else %>
@@ -25,51 +27,7 @@
     <%= yield :javascript %>
   </head>
   <body>
-    <div class="container">
-      <div class="span-24 last">
-        <div class="top_menu bg_palette_1 text_palette_8">
-          <%= top_menu %>
-        </div>
-      </div>
-
-      <div class="span-6">
-        <div><%= logo_image %></div>
-
-        <div class="side_menu bg_palette_5 border_palette_5 text_palette_8">
-          <%= side_menu %>
-        </div>
-        <br/><br/><br/>
-        <div class="side_menu bg_palette_5 border_palette_5 text_palette_8" >
-          <%= user_box %>
-        </div>
-
-      </div>
-      
-      
-
-      <div class="span-18 last">
-        <% if flash[:notice] -%>
-          <div class="flash_message notice_message"><%= flash[:notice] %></div>
-        <% end -%>
-        <% if flash[:warning] -%>
-          <div class="flash_message warning_message"><%= flash[:warning] %></div>
-        <% end -%>
-        <% if flash[:error] -%>
-          <div class="flash_message error_message"><%= flash[:error] %></div>
-        <% end -%>
-
-        <div class="base_content">
-          <%= yield %>
-        </div>
-      </div>
-
-      <div class="span-24 last">
-        <div class="footer bg_palette_1 text_palette_8">
-          <%= site_footer %>
-        </div>
-      </div>
-
-    </div>
+    <%= Template.new(@layout_file).render_template(self) %>
   </body>
 </html>
 
