--- a/app/views/themes/css_editor.html.erb
+++ b/app/views/themes/css_editor.html.erb
@@ -1,7 +1,7 @@
 <h1>Theme Settings</h1>
 
 <div class="edit_content_box">
-  <% form_tag( { :action => :update_css, :name => 'changeme' } ) do  %>
+  <% form_tag( { :action => :update_css } ) do  %>
     <p>
       <strong>CSS:</strong><br/>
       <%= text_area_tag :css, @css %>
