--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,7 +14,11 @@
     <%= stylesheet_link_tag 'text_and_colors' %>
     <%= stylesheet_link_tag 'application' %>
     <link rel="stylesheet" href="<%= url_for(:controller => '/themes', :action => :colors,
-      :name => @theme_colors, :format => 'css') %>" type="text/css" />
+      :name => @theme_colors, :format => 'css') %>" type="text/css" media="screen"/>
+    <% if @css_override %>
+      <link rel="stylesheet" href="<%= url_for(:controller => '/themes', :action => :css,
+        :name => 'override', :format => 'css') %>?<%= @css_override_timestamp %>" type="text/css" media="screen"/>
+    <% end %>
     <% if RAILS_ENV == "production" %>
       <script type="text/javascript" src="http://jqueryjs.googlecode.com/files/jquery-1.3.2.min.js"></script>
     <% else %>
