--- a/app/views/themes/css_editor.html.erb
+++ b/app/views/themes/css_editor.html.erb
@@ -13,20 +13,25 @@
 </div>
 
 
+<p class="admin_links">
+  <%= link_to 'Site Settings', site_settings_path %> |
+  <%= link_to 'Theme/Styling', :controller => :themes %> |
+  <%= link_to 'List of Pages', content_pages_path %> |
+  <%= link_to 'List of Categories', categories_path %>
+</p>
+
+
 <script type="text/javascript" src="/codemirror/js/codemirror.js"></script>
 <script type="text/javascript" src="/codemirror/js/mirrorframe.js"></script>
 
 <script type="text/javascript">
   var textarea = $('#css')[0];
-  var editor = new CodeMirror(CodeMirror.replace(textarea), {
-    height: "350px",
-    content: textarea.value,
+  var editor = CodeMirror.fromTextArea("css", {
     parserfile: "parsecss.js",
-    stylesheet: "/codemirror/css/csscolors.css",
     path: "/codemirror/js/",
-    autoMatchParens: true
+    stylesheet: "/codemirror/css/jscolors.css",
+    autoMatchParens: true,
+    height: "350px"
   });
-
-
 
 </script>
