--- a/app/views/themes/index.html.erb
+++ b/app/views/themes/index.html.erb
@@ -39,3 +39,11 @@
   <% end %>
 
 </div>
+
+
+<p class="admin_links">
+  <%= link_to 'Site Settings', site_settings_path %> |
+  <%= link_to 'Custom CSS', :controller => :themes, :action => :css_editor %> |
+  <%= link_to 'List of Pages', content_pages_path %> |
+  <%= link_to 'List of Categories', categories_path %>
+</p>
